src/Components/Frame.css
:root {
    --top-bar-height: 50px;
    --side-bar-width: 200px;
}

#root {
    width: 100dvw;
    min-width: 250px;
    height: 100dvh;
    padding: 0;
    margin: 0;
    background-color: #000;
    position: fixed;
    top: 0;
    left: 0;
    display: grid;
    grid-template-areas: "top top"
                         "left content";
    grid-template-columns: var(--side-bar-width) 1fr;
    grid-template-rows: var(--top-bar-height) 1fr;
}

#root * {
    color: white;
    font-family: var(--mono);
    box-sizing: border-box;
}

#root > * {
    height: 100%;
    width: 100%;
    margin: 0;
    padding: 10px;
    overflow: hidden;
}

#top-bar {
    grid-area: top;
    border-bottom: 1px solid white;
    background-color: #000;
    display: grid;
    grid-template-columns: calc(var(--top-bar-height) - 10px) calc(var(--side-bar-width) - 10px) 1fr;
    grid-template-rows: 1fr;
    height: 100%;
    box-sizing: border-box;
    z-index: 10;
}

#menu {
    visibility: collapse;
    height: calc(var(--top-bar-height) - 20px);
    aspect-ratio: 1;
}

#logo {
    height: calc(var(--top-bar-height) - 20px);
    max-width: calc(var(--top-bar-width) - 20px);
    box-sizing: border-box;
}

.search-bar {
    background-color: transparent;
    border: none;
    border-bottom: 3px solid white;
    color: white;
}

#search-bar-top {
    field-sizing: content;
    min-width: 10%;
    max-width: 50%;
    font-size: x-large;
    visibility: visible;
}

#search-bar-top:active {
    border: none;
}

#search-bar-bottom {
    field-sizing: content;
    min-width: 10%;
    max-width: 50%;
    visibility: collapse;
}

#search-button {
    width: 20%;
    visibility: collapse;
}

#side-bar {
    grid-area: left;
    border-right: 1px solid white;
    background-color: #000e;
    overflow: auto;
}

#side-bar ul {
    list-style: none;
    padding: 0;
    margin: 0;
}

#search-filter-values {
    display: none;
    visibility: collapse;
}

@media screen and (max-width: 720px) {
    #root {
        grid-template-columns: 1fr;
        grid-template-areas: "top"
                             "content";
    }

    #top-bar {
        grid-template-columns: 1fr 3fr;
        animation: shrink-top-bar forwards 5s;
    }

    @keyframes shrink-top-bar {
        from {
            grid-template-columns: calc(var(--top-bar-height) - 10px) calc(var(--side-bar-width) - 10px) 1fr;
        }
        to {
            grid-template-columns: 1fr 3fr;
        }
        
    }

    #logo {
        left: 50%;
        transform: translatex(-50%);
        position: fixed;
    }

    #menu {
        visibility: visible;
        position: sticky;
        background-color: black;
        border: 2px solid white;
        border-radius: 25%;
        padding: 0;
        margin: 0;
    }

    #menu.menu-expanded {
        animation: menu-button-expand .25s forwards;
    }
    
    #menu.menu-collapsed {
        animation: menu-button-collapse .25s forwards;
    }

    @keyframes menu-button-expand { from {border-radius: 25%;} to {border-radius: 50%;}}
    @keyframes menu-button-collapse { from {border-radius: 50%;} to {border-radius: 25%;}}

    #menu > div {
        visibility: visible;
        height: 10%;
        width: 80%;
        position: absolute;
        border: 0;
        border-radius: 100vh;
        background-color: white;
        padding: 0;
        margin: 0;
        top: 50%;
        left: 50%;
        transform: translatex(-50%) translatey(-50%);
        z-index: 20;
    }

    @keyframes blink {
        0% {background-color: #fff;}
        50% {background-color: #fff;}
        55% {background-color: #bbb;}
        60% {background-color: #fff;}
        100% {background-color: #fff;}
    }

    #menu:not(.menu-expanded):not(.menu-collapsed) > div:nth-child(1) { animation: menu-stripe-1-setup .5s forwards ease-in-out;}/*, blink 2s infinite .0s; }*/
    #menu:not(.menu-expanded):not(.menu-collapsed) > div:nth-child(2) { animation: menu-stripe-2-setup .25s forwards ease-in-out;}/*, blink 2s infinite .1s; }*/
    #menu:not(.menu-expanded):not(.menu-collapsed) > div:nth-child(3) { animation: menu-stripe-3-setup .5s forwards ease-in-out;}/*, blink 2s infinite .2s; }*/
    #menu.menu-expanded > div:nth-child(1) { animation: menu-stripe-1-expand .25s forwards; }
    #menu.menu-expanded > div:nth-child(2) { animation: menu-stripe-2-expand .25s forwards; }
    #menu.menu-expanded > div:nth-child(3) { animation: menu-stripe-3-expand .25s forwards; }
    #menu.menu-collapsed > div:nth-child(1) { animation: menu-stripe-1-collapse .25s forwards, blink 2s infinite .0s; }
    #menu.menu-collapsed > div:nth-child(2) { animation: menu-stripe-2-collapse .25s forwards, blink 2s infinite .1s; }
    #menu.menu-collapsed > div:nth-child(3) { animation: menu-stripe-3-collapse .25s forwards, blink 2s infinite .2s; }
    @keyframes menu-stripe-1-setup {0% {transform: translatex(-50%) translatey(-50%) rotate(-90deg);} 50% {transform: translatex(-50%) translatey(-50%)} 100% { top: 25%; }}
    @keyframes menu-stripe-1-expand {from {top: 25%; transform:  translatex(-50%) translatey(-50%) rotate(0deg);} to {top: 50%; transform:  translatex(-50%) translatey(-50%) rotate(45deg);}}
    @keyframes menu-stripe-1-collapse {from {top: 50%; transform:  translatex(-50%) translatey(-50%) rotate(45deg);} to {top: 25%; transform:  translatex(-50%) translatey(-50%) rotate(0deg);}}
    @keyframes menu-stripe-2-setup {50% {transform: translatex(-50%) translatey(-50%)} 100% { transform: translatex(-50%) translatey(-50%); top: 50%; }}
    @keyframes menu-stripe-2-expand {from {width: 80%; height: 10%; } to {width: 15%; height: 15%; }}
    @keyframes menu-stripe-2-collapse {from {width: 15%; height: 15%; } to {width: 80%; height: 10%; }}
    @keyframes menu-stripe-3-setup {0% {transform: translatex(-50%) translatey(-50%) rotate(-90deg);} 50% {transform: translatex(-50%) translatey(-50%)} 100% { top: 75%; }}
    @keyframes menu-stripe-3-expand {from {top: 75%; transform:  translatex(-50%) translatey(-50%) rotate(0deg);} to {top: 50%; transform:  translatex(-50%) translatey(-50%) rotate(-45deg);}}
    @keyframes menu-stripe-3-collapse {from {top: 50%; transform:  translatex(-50%) translatey(-50%) rotate(-45deg);} to {top: 75%; transform:  translatex(-50%) translatey(-50%) rotate(0deg);}}

    #search-bar-top {
        visibility: collapse;
    }

    #search-bar-bottom {
        visibility: visible;
        min-width: 80%;
    }

    #search-button {
        visibility: visible;
        background-color: transparent;
        border: 1px solid white;
        border-radius: 1vw;
        padding: 0;
        margin: 0;
    }

    #side-bar {
        grid-area: content;
        position: fixed;
        width: 100vw;
        height: fit-content;
        /* visibility: collapse; */
        border-bottom: 1px solid white;
        border-right: none;
        overflow: hidden;
        padding-top: 0; padding-bottom: 0; margin-top: 0; margin-bottom: 0;
        animation: .25s forwards ease-out;
    }

    /* extend the menu from the top */
    #side-bar.grow { transform: translatey(-100%); }
    #side-bar.grow.menu-expanded { animation-name: appear-slide; }
    #side-bar.grow.menu-collapsed { animation-name: disappear-slide; }
    @keyframes appear-slide { from { transform: translatey(-100%); } to { transform: translatey(0%); } }
    @keyframes disappear-slide { from { transform: translatey(0%); } to { transform: translatey(-100%); } }

}

#content {
    grid-area: content;
    overflow: auto;
}

.filter-button {
    background-color: transparent;
    border: 1px solid white;
    color: white;
    padding: 5px 10px;
    margin: 2px;
    border-radius: 5px;
    cursor: pointer;
}

#active-filters {
    display: flex;
    flex-wrap: wrap;
    gap: 5px;
    margin-top: 10px;
}

